# salesforce-archivist

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  compose.devcontainer.yaml  compose.yaml  config.example.yaml  main.py  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: quality-assurance.yaml  release.yaml
salesforce_archivist/: archivist.py  content_version.py  document_link.py  salesforce.py
src/salesforce_archivist/: archivist.py  cli.py  content_version.py  document_link.py  salesforce.py
src/salesforce_archivist/salesforce/: api.py  attachment.py  content_document_link.py  content_version.py  download.py  salesforce.py  validation.py
test/: test_archivist.py
test/salesforce/: helper.py  test_api.py  test_api_client.py  test_api_usage.py  test_attachment.py  test_client.py  test_content_document_link.py  test_content_version.py  test_download.py  test_salesforce.py  test_salesforce_salesforce.py  test_salesforce_salesforce_api_client.py  test_validation.py
tests/: test_salesforce.py
tests/salesforce/: test_api_usage.py  test_client.py  test_salesforce.py
