[tool.poetry]
name = "salesforce-archivist"
version = "0.1.0"
description = "Salesforce files archiving tool"
authors = ["piotrekkr <piotrekkr@users.noreply.github.com>"]
readme = "README.md"
packages = [
  { include = "salesforce_archivist", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
simple-salesforce = "^1.12.5"
python-dotenv = "^1.0.0"
PyYAML = "^6.0.1"
click = "^8.1.7"
schema = "^0.7.5"
python-dateutil = "^2.8.2"
types-PyYAML = "^6.0.12.12"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
ruff = "^0.1.15"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
tomli = "^2.0.1"
types-requests = "^2.31.0.20240106"
poethepoet = "^0.24.4"

[tool.poetry.scripts]
archivist = 'salesforce_archivist.cli:cli'

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "test",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "src"
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
no_implicit_optional = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
warn_return_any = true
warn_unused_ignores = true

[tool.isort]
profile = "black"
src_paths = ["src/salesforce_archivist", "test"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.black]
preview = true
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.poe.tasks.test]
help = "Run tests"
cmd  = "pytest ."

[tool.poe.tasks.ruff-check]
help = "Run ruff"
cmd  = "ruff check --fix"

[tool.poe.tasks.ruff-format]
help = "Run ruff"
cmd  = "ruff format"

[tool.poe.tasks.mypy]
help = "Run mypy"
cmd = "mypy"

[tool.poe.tasks.cs]
help = "Run code style tools"
sequence  = ["ruff-format", "ruff-check", "mypy"]
